fixed image overflow from person-card bounds

--- a/src/styles/members.css
+++ b/src/styles/members.css
@@ -71,13 +71,12 @@
   width: 300px;
   padding: 7px;
   text-align: center;
-  background-color: aqua;
 }
 
 .img-wrapper {
   width: 300px;
+  width: 100%;
   height: 300px;
-  background-color: brown;
 }
 
 .img-wrapper img {
